chore: Update TypeScript configuration and restore release configuration file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2016",
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "Bundler",
+    "rootDir": "src",          // key: all inputs live under src/
+    "outDir": "dist",          // key: all outputs go to dist/
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": false,
+    // optional but fine:
+    "declarationDir": "dist",
     "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["firebase_admin_service.json", "**/*.ts"]
+  "include": ["src"],          // key: ONLY compile src
+  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/__tests__/**"] // be explicit
 }
-
