--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "description": "",
   "devDependencies": {
     "@commitlint/config-conventional": "^20.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^12.0.2",
     "@eslint/js": "^9.39.1",
     "@types/express-fileupload": "^1.5.1",
     "@types/mime-types": "^3.0.1",
